--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@types/react": "~18.0.27",
     "date-fns": "^2.30.0",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~48.0.18",
     "expo-blur": "~12.2.2",
     "expo-image-picker": "~14.1.1",
